# appset-secret-plugin

./: Dockerfile  README.md  index.yaml  kustomization.yaml  main.py  renovate.json
.github/: renovate-config.json  renovate.json
.github/workflows/: cd-helm-release.yml  ci-helm-lint-test.yml  docker-push-daily.yml  helm-docs.yaml  renovate.yml
charts/appset-secret-plugin/: Chart.yaml  README.md  values.yaml
charts/appset-secret-plugin/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  secret-token.yaml  service.yaml  serviceaccount.yaml  test_ci_secret.yaml
charts/appset-secret-plugin/templates/tests/: test-configmap.yaml
charts/argocd-appset-secret-plugin/: Chart.yaml  README.md  values.yaml
charts/argocd-appset-secret-plugin/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  secret-token.yaml  serviceaccount.yaml  test_ci_secret.yaml
charts/argocd-appset-secret-plugin/templates/tests/: test-connection.yaml
docker/: Dockerfile  README.md  main.py  pyproject.toml
example/: appset_and_secret.yaml
kustomize/: README.md  kustomization.yaml
kustomize/manifests/: configmap.yaml  deployment.yaml  service.yaml
manifests/: plugin-secret.yaml
scripts/: bump-chart-version.sh
